--- a/index.html
+++ b/index.html
@@ -22,9 +22,49 @@
 
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target=" .navbar" data-bs-offset="100">
 
 
+    <!-- header Design -->
+
+    <header>
+        <nav class="navbar navbar-expand-lg navigation-wrap">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./images/logo.png" class="img-fluid">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+<i class="fas fa-stream navbar-toggler-icon"></i>
+ 
+
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-2 ">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#explore-food">Explore Foods</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="#testimonial">Review</a>
+                        </li>
+                        <li><button class="main-btn"> 1200 343 123</button></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+    </header>
 
 
 
