Add more data again

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    
+
                     <!-- <span class="navbar-toggler-icon"></span> -->
-<i class="fas fa-stream navbar-toggler-icon"></i>
- 
+                    <i class="fas fa-stream navbar-toggler-icon"></i>
+
 
                 </button>
 
@@ -53,7 +53,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#explore-food">Explore Foods</a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link" href="#testimonial">Review</a>
                         </li>
@@ -71,28 +71,127 @@
 
 
     <section id="home">
-<div class="container-fluid px-0 top-banner">
-<div class="container">
-    <div class="row">
-        <div class=" col-lg-5 col-md-6">
-<h1>UNLIMITED <br> MEDIUM <span>PIZZAS</span></h1>
-<h2>Medium 2-topping* pizza</h2>
-<p>*Additional charge for prenium topping, Minimum of 2 required</p>
+        <div class="container-fluid px-0 top-banner">
+            <div class="container">
+                <div class="row">
+                    <div class=" col-lg-5 col-md-6">
+                        <h1>UNLIMITED <br> MEDIUM <span>PIZZAS</span></h1>
+                        <h2>Medium 2-topping* pizza</h2>
+                        <p>*Additional charge for prenium topping, Minimum of 2 required</p>
 
-<div class="mt-4">
-    <button class="main-btn"> Order now <i class="fas fa-shopping-basket ps-3"></i></button>
+                        <div class="mt-4">
+                            <button class="main-btn"> Order now <i class="fas fa-shopping-basket ps-3"></i></button>
 
-</div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
 
         </div>
 
-    </div>
 
-</div>
-
-</div>
+    </section>
 
 
+    <!-- section-2 our menu -->
+
+    <section class="our-menu p-4">
+        <div class="container text-center">
+            <h2 class="pb-4"> Our Menu</h2>
+            <div class="row">
+                <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
+                    <div class="card">
+
+
+                        <div class="cat-img">
+                            <a class="link_category_product" href="#">
+                                <img src="./images/img/category1.png" class="img-fluid">
+                            </a>
+                            <div class="cat-tittle">
+                                <a href="#">Pizza</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
+                    <div class="card">
+                        <div class="cat-img">
+                            <a class="link_category_product" href="#">
+                                <img src="./images/img/category2.png" class="img-fluid">
+                            </a>
+                            <div class="cat-tittle">
+                                <a href="#">Sauces</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
+                    <div class="card">
+                        <div class="cat-img">
+                            <a class="link_category_product" href="#">
+                                <img src="./images/img/category3.png" class="img-fluid">
+                            </a>
+                            <div class="cat-tittle">
+                                <a href="#">Combo</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
+                    <div class="card">
+                        <div class="cat-img">
+                            <a class="link_category_product" href="#">
+                                <img src="./images/img/category4.png" class="img-fluid">
+                            </a>
+                            <div class="cat-tittle">
+                                <a href="#">Kids menus</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
+                    <div class="card">
+                        <div class="cat-img">
+                            <a class="link_category_product" href="#">
+                                <img src="./images/img/category5.png" class="img-fluid">
+                            </a>
+                            <div class="cat-tittle">
+                                <a href="#">Chicken</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
+                    <div class="card">
+                        <div class="cat-img">
+                            <a class="link_category_product" href="#">
+                                <img src="./images/img/category6.png" class="img-fluid">
+                            </a>
+                            <div class="cat-tittle">
+                                <a href="#">Box meals</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
     </section>
 
 
