--- a/index.html
+++ b/index.html
@@ -197,7 +197,107 @@
 
     <!-- Section-3 about -->
 
-    <section></section>
+    <section id="about">
+        <div class="about-section wrapper">
+            <div class="container">
+                <div class="row align-item-center">
+                    <div class="col-lg-7 col-md-12 mb-lg-0 mb-5">
+
+                        <div class="card border-0">
+                            <img src="./images/img/img-1.png" class="img-fluid">
+
+                        </div>
+                    </div>
+
+                    <div class="col-lg-5 col-md-12 text-sec">
+                        <h2>We pride ourselves on making real food from the best indgredients.</h2>
+                        <p> We need food because it provides nutrients, energy for activity, growth. Similarly, all
+                            functions of the body like breathing, digesting food, and keeping warm are made possible
+                            because of food</p>
+
+                        <button class="main-btn">Learn More</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="container food-type">
+                <div class="row align-item-center">
+                    <div class="col-lg-5 col-md-12 text-sec mb-lg-0 mb-5">
+
+                        <h2>We make everything by hand with the best indgredients.</h2>
+                        <p> We need food because it provides nutrients, energy for activity, growth. Similarly, all
+                            functions of the body like breathing, digesting food, and keeping warm are made possible
+                            because of food.</p>
+                        <ul class="list-unstyled py-3">
+                            <li>Etiam sed dolar ac diam volutpat</li>
+                            <li>Erat volutpat aliquet imperdiet</li>
+                            <li>purus adio finibus bibendum </li>
+                        </ul>
+                        <button class="main-btn">Learn More</button>
+
+                    </div>
+                    <div class=" col-lg-7 col-md-12">
+                        <div class="card border-0">
+                            <img src="./images/img/img-2.png" class="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <!-- Section-4 explore food -->
+    <section id="explore-food">
+        <div class="explore-food wrapper">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="text-content text-center">
+                            <h2>Explore our food</h2>
+                            <p>Food contains essential nutrients such as carbohydrates, proteins, fats, fibers, vitamins
+                                and minerals. They can be eaten raw, cooked or processed.Humans and other living
+                                organisms eat food to provide energy to their body in order to perform specific
+                                functions. This will enable them to survive and stay healthy.</p>
+
+                        </div>
+                    </div>
+
+                </div>
+
+<div class="row pt-5">
+
+    <div class=" col-lg-4 col-md-6 mb-lg-0 mb-5">
+
+        <div class="card border">
+<img src="images/img/img-3.jpg" class="img-fluid">
+
+<div class="p-3">
+    <h5>10 Reasons To Do A Digital Detox Challange</h5>
+    <p>Humans and other living organisms eat food to provide energy to their body in order to perform 
+    specific functions...</p>
+    <button class=" mt-2 main-btn">Read More</button>
+</div>
+
+        </div>
+
+    </div>
+</div>
+
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
 
 
 
@@ -210,6 +310,6 @@
         crossorigin="anonymous"></script>
 
     <script src="main.js"></script>
-</body>
+
 
 </html>
