--- a/index.html
+++ b/index.html
@@ -268,29 +268,117 @@
 
                 </div>
 
-<div class="row pt-5">
+                <div class="row pt-5">
 
-    <div class=" col-lg-4 col-md-6 mb-lg-0 mb-5">
+                    <div class=" col-lg-4 col-md-6 mb-lg-0 mb-5">
 
-        <div class="card border">
-<img src="images/img/img-3.jpg" class="img-fluid">
+                        <div class="card border">
+                            <img src="images/img/img-3.jpg" class="img-fluid">
 
-<div class="p-3">
-    <h5>10 Reasons To Do A Digital Detox Challange</h5>
-    <p>Humans and other living organisms eat food to provide energy to their body in order to perform 
-    specific functions...</p>
-    <button class=" mt-2 main-btn">Read More</button>
-</div>
+                            <div class="p-3">
+                                <h5>10 Reasons To Do A Digital Detox Challange</h5>
+                                <p>Humans and other living organisms eat food to provide energy to their body in order
+                                    to perform
+                                    specific functions...</p>
+                                <button class=" mt-2 main-btn">Read More</button>
+                            </div>
 
-        </div>
+                        </div>
 
-    </div>
-</div>
+                    </div>
+                    <div class=" col-lg-4 col-md-6 mb-lg-0 mb-5">
+
+                        <div class="card border">
+                            <img src="images/img/img-4.jpg" class="img-fluid">
+
+                            <div class="p-3">
+                                <h5>The Ultimate Hangover Burger: Egg in a Hole Burger Grilled Chese</h5>
+                                <p>Humans and other living organisms eat food to provide energy to their body in order
+                                    to perform
+                                    specific functions...</p>
+                                <button class=" mt-2 main-btn">Read More</button>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class=" col-lg-4 col-md-6 mb-lg-0 mb-5">
+
+                        <div class="card border">
+                            <img src="images/img/img-5.jpg" class="img-fluid">
+
+                            <div class="p-3">
+                                <h5>Tradition soft Pretzele with Sweet Beer Chese</h5>
+                                <p>Humans and other living organisms eat food to provide energy to their body in order
+                                    to perform
+                                    specific functions...</p>
+                                <button class=" mt-2 main-btn">Read More</button>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
 
 
             </div>
         </div>
     </section>
+
+<!-- section-5 testimonial -->
+ <section id="testimonial">
+    <div class="wrapper testimonial-section">
+        <div class="container text-center">
+            <div class="text-center pb-4">
+                <h2>Testimonial</h2>
+            </div>
+           <div class="row">
+            <div class="col-sm-12 col-lg-10 offset-lg-1">
+
+
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="images/review/review-1.jpg" class="d-block w-100" alt="...">
+                        <p> " Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. "</p>
+                        <h5>Adnan Abid UX Designer</h5>
+                      </div>
+                      <div class="carousel-item ">
+                        <img src="./images/review/review-2.jpg" class="d-block w-100" alt="...">
+                        <p> " Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. "</p>
+                        <h5>Adnan Abid UX Designer</h5>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="images/review/review-1.jpg" class="d-block w-100" alt="...">
+
+                        <p> " Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. "</p>
+                        <h5>Adnan Abid UX Designer</h5>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+
+
+            </div>
+           </div> 
+        </div>
+    </div>
+ </section>
+
 
 
 
