--- a/index.html
+++ b/index.html
@@ -326,61 +326,113 @@
         </div>
     </section>
 
-<!-- section-5 testimonial -->
- <section id="testimonial">
-    <div class="wrapper testimonial-section">
-        <div class="container text-center">
-            <div class="text-center pb-4">
-                <h2>Testimonial</h2>
-            </div>
-           <div class="row">
-            <div class="col-sm-12 col-lg-10 offset-lg-1">
+    <!-- section-5 testimonial -->
+    <section id="testimonial">
+        <div class="wrapper testimonial-section">
+            <div class="container text-center">
+                <div class="text-center pb-4">
+                    <h2>Testimonial</h2>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-10 offset-lg-1">
 
 
 
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                                    class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                                    aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                                    aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="images/review/review-1.jpg" class="d-block w-100" alt="...">
+                                    <p> " Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonantia, there live the blind texts. "</p>
+                                    <h5>Adnan Abid UX Designer</h5>
+                                </div>
+                                <div class="carousel-item ">
+                                    <img src="./images/review/review-2.jpg" class="d-block w-100" alt="...">
+                                    <p> " Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonantia, there live the blind texts. "</p>
+                                    <h5>Adnan Abid UX Designer</h5>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/review/review-1.jpg" class="d-block w-100" alt="...">
+
+                                    <p> " Far far away, behind the word mountains, far from the countries Vokalia and
+                                        Consonantia, there live the blind texts. "</p>
+                                    <h5>Adnan Abid UX Designer</h5>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+
+
                     </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/review/review-1.jpg" class="d-block w-100" alt="...">
-                        <p> " Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. "</p>
-                        <h5>Adnan Abid UX Designer</h5>
-                      </div>
-                      <div class="carousel-item ">
-                        <img src="./images/review/review-2.jpg" class="d-block w-100" alt="...">
-                        <p> " Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. "</p>
-                        <h5>Adnan Abid UX Designer</h5>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/review/review-1.jpg" class="d-block w-100" alt="...">
-
-                        <p> " Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. "</p>
-                        <h5>Adnan Abid UX Designer</h5>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-
-
+                </div>
             </div>
-           </div> 
+        </div>
+    </section>
+
+    <!-- section-6 -->
+    <footer id="footer">
+        <div class="footer pt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center">
+
+                        <div class="footer-social pb-4 text-center">
+
+                            <a href="https://www.facebook.com/adil.raees.96?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+
+                            <a href="https://www.linkedin.com/in/adil-raees-08436a2b2"><i class="fab fa-linkedin"></i></a>
+
+                            <a href="https://www.instagram.com/adilraees476?igsh=MTFpYnNoaGV0enB5cg=="><i class="fab fa-instagram"></i></a>
+
+                        </div>
+
+                    </div>
+                    <div class="col-md-6">
+                        <form class="newsletter">
+
+                            <div class="d-flex">
+                                <input class="form-control" placeholder="Email Address Here" type="email">
+                                <button class="main-btn" type="submit">Subcribe</button>
+
+                            </div>
+                        </form>
+
+                    </div>
+<div class="col-sm-12">
+    <div class="footer-copy">
+        <div class="copy-right text-center pt-5">
+            <h2 class="footeeer">Developed by Adil Raees</h2>
         </div>
     </div>
- </section>
+</div>
+                    
+                </div>
 
-
-
+            </div>
+        </div>
+    </footer>
 
 
 
