--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse" id="">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-2 ">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#home">Home</a>
@@ -121,6 +121,7 @@
 
                 <div class=" col-6 col-sm-2 mb-4 mb-lg-0">
                     <div class="card">
+                        
                         <div class="cat-img">
                             <a class="link_category_product" href="#">
                                 <img src="./images/img/category2.png" class="img-fluid">
